change revoke request from delete to post
